libgphoto2 (2.4.1-1) unstable; urgency=low

  * New upstream release.
  * debian/copyright:
     - Use an almost decent copyright format, as discussed on
       <http://wiki.debian.org/Proposals/CopyrightFormat>.
     - Properly specify copyright holders and licenses, grouping them by
       components when possible.
  * debian/patches:
     - Drop 30_additional_camera_support.dpatch, merged upstream.
     - Update 45_increase_canon_timeout.dpatch, upstream bumped the
       timeout from 75 to 150 (Debian had 750), but 750 looks doing a
       better job according to user comments on the tracker. Keeping that
       value.
     - Drop 65_udev_usb_subsystem.dpatch, merged upstream (using another
       approach).
     - Drop 75_deprecated_hal_key.dpatch, merged upstream.
     - Drop disabled patches (from the list and from that directory) since
       one can get them back from the VCS.
  * debian/libgphoto2-2.dirs:
     - Drop “/usr/share/hal/fdi/information/10freedesktop” from
       there. There's no use shipping an empty directory (especially since
       the maintainer scripts are taking care of removing files previously
       created in that directory).
  * debian/libgphoto2-2-dev.files:
     - Drop “*.la” files from /usr/lib only (not from the subdirectories).
     - Remove them in debian/rules before trying to remove debian/tmp.
     - Drop the recursive symlink (“/usr/include/gphoto2/gphoto2 -> .”).
     - Remove it in debian/rules before running dh_movefiles.
  * debian/rules:
     - Remove “patch” and “unpatch” targets since dpatch.make is included
       already.
     - Move the single dependency on “unpatch-stamp” to “unpatch” since
       there's no stamp for “unpatch”.
  * debian/control:
     - Clean the Depends of the -dev package:
        - Use libc-dev instead of libc6-dev (there are at least libc0.1,
          libc0.3, libc6, libc6.1 and their -dev packages).
        - Remove libltdl3-dev, no longer needed since “*.la” files are no